--- a/src/styles/layout/page_altcontent.scss
+++ b/src/styles/layout/page_altcontent.scss
@@ -3,7 +3,7 @@
     padding: $mobile-gutter*2 0px;
     
     h1 {
-        margin-bottom: $mobile-gutter;
+        margin-bottom: $mobile-gutter+20px;
     }
 
     h3 {
